--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -736,7 +736,7 @@ s| `reset` m|
 1.3+h| Game Commands +
 (Available in Game mode)
 
-s| `guess` m| WORD
+s| `guess` m| _WORD_
 
 s| `skip` m|
 
@@ -820,7 +820,7 @@ if you want to switch to certain modes.
 share your files manually. You can make use of the drag and drop feature to accelerate the process.
 
 *Q*: How can I save my data? +
-*A*: _Dukemon's_ data is saved to the hard disk automatically (eg. adding _cards_/words, statistics etc)
+*A*: _Dukemon's_ data is saved to the hard disk automatically (eg. adding _cards_/_words_, statistics etc)
 There is no need to manually save data or Game `Statistics`.
 
 *Q*: I edited some files and _Dukemon_ doesn't work properly now. How do I resolve this? +
